--- a/styles.css
+++ b/styles.css
@@ -53,5 +53,5 @@ button:hover {
 }
 
 body {
-    background-image: url(images/HadesScreenshot.png);
+    background: url(images/HadesScreenshot.png);
 }
