--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 .logo {
     cursor: pointer;
