--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-li, a, button {
+li, a, button, p {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -52,8 +52,14 @@ button:hover {
 
 .AboutMe {
     text-align: center;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 body {
     background: url("images/HadesScreenshot.png");
+}
+
+h1 {
+    font-family: "Monsterrat", sans-serif;
+    color: #edf0f1;
 }
