--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ button:hover {
 body {
     background: url("images/HadesScreenshot.png");
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1 {
