--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,9 @@ button:hover {
 .AboutMe {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.6);
+    height:200px; 
+    padding-top:25px; 
+    margin-top:25px;
 }
 
 body {
