--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,11 @@ a:hover {
     padding-top:25px;
     margin-top:25px;
 }
+
+.Socials {
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    height:200px;
+    padding-top:25px;
+    margin-top:25px;
+}
