--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,10 @@ a:hover {
     padding-top:25px;
     margin-top:25px;
 }
+
+img {
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    padding: 10px;
+}
