--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ button:hover {
     background-color: rgba(0, 136, 169, 0.8);
 }
 
-.AboutMe {
+.Index {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.6);
     height:200px; 
