--- a/styles.css
+++ b/styles.css
@@ -170,10 +170,14 @@ html {
     overflow: hidden;
 }
 
-@media only screen and (min-width: 800px) and (max-width: 930px) {
+@media only screen and (min-width: 780px) and (max-width: 930px) {
     body {
         padding-top: 10px;
         margin: 0 40px 200px;
         overflow: scroll;
+    }
+
+    html {
+        height: 30%;
     }
 }
