--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,15 @@ html {
 @media only screen and (min-width: 780px) and (max-width: 930px) {
     body {
         padding-top: 10px;
-        margin: 0 40px 200px;
+        margin: 0 40px;
         overflow: scroll;
+    }
+    
+    .showcase {
+        height: 1px;
+    }
+
+    .Index, .About, .Socials, .Projects {
+        height: 200px;
     }
 }
