Deleted redundant code

--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ img {
         padding-left: 14px;
     }
 
-    .Github, .Discord, .Instagram, .Twitch {
+    .Github, .Instagram, .Twitch {
         width: 75px;
     }
 
