--- a/styles.css
+++ b/styles.css
@@ -184,3 +184,15 @@ html {
         height: 200px;
     }
 }
+
+footer {
+    display: flex;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    justify-content: center;
+    padding: 5px 10%;
+    background-color: rgba(0, 0, 0, 1);
+    border-radius: 10px;
+}
