--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,19 @@ li, a, button, p {
     font-weight: 500;
     font-size: 16px;
     color: #edf0f1;
-    text-decoration: none;
     align-content: center;
     align-items: center;
+    text-underline: dotted;
 }
 
 header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px 10%;
+    padding: 10px 10%;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 50px;
+    margin-top: 7px;
 }
 
 .nav_links {
@@ -37,7 +38,7 @@ header {
     align-content: center;
 }
 
-.nav_links, li, a:hover {
+.nav_links, a:hover {
     color: #ff99ff;
     align-content: center;
 }
@@ -192,7 +193,10 @@ footer {
     right: 0;
     position: fixed;
     justify-content: center;
-    padding: 5px 10%;
     background-color: rgba(0, 0, 0, 1);
-    border-radius: 10px;
+    border-radius: 0;
+}
+
+.footerText {
+    font-size: 10px;
 }
