--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,19 @@ html {
         font-size: 16px;
     }
 }
+/* vertical phones */
+@media only screen and (min-width: 350px) and (max-width: 450px) {
+    .nav_links, li {
+        display: inline-block;
+        padding: 0 10px;
+        align-content: center;
+    }
 
+    p {
+        padding: 5px;
+        font-size: 16px;
+    }
+}
 footer {
     display: flex;
     left: 0;
