--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,31 @@ html {
         font-size: 16px;
     }
 }
+
+@media only screen and (min-width: 780px) and (max-width: 930px) {
+    body {
+        padding-top: 5px;
+        margin: 0 40px;
+        overflow: scroll;
+    }
+
+    .showcase {
+        height: 40px;
+        text-align: center;
+    }
+
+    .fSlash3 {
+        visibility: hidden;
+    }
+
+    .Index, .About, .Socials, .Projects {
+        height: 200px;
+    }
+    p {
+        font-size: 16px;
+    }
+}
+
 footer {
     display: flex;
     left: 0;
